; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/avformat/extr_demux.c_BuildAVOptions.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/avformat/extr_demux.c_BuildAVOptions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"avformat-options\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @BuildAVOptions to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @BuildAVOptions(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i8* @var_InheritString(i32* %5, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  store i8* %6, i8** %3, align 8
  store i32* null, i32** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i32 @vlc_av_get_options(i8* %10, i32** %4)
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @free(i8* %12)
  br label %14

14:                                               ; preds = %9, %1
  %15 = load i32*, i32** %4, align 8
  ret i32* %15
}

declare dso_local i8* @var_InheritString(i32*, i8*) #1

declare dso_local i32 @vlc_av_get_options(i8*, i32**) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
